apps/firefly/firefly/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly
  namespace: firefly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefly
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: firefly
    spec:
      containers:
        - name: firefly
          image: fireflyiii/core:version-6.1.14
          volumeMounts:
            - mountPath: /var/www/html/storage/upload
              name: uploads
          ports:
            - containerPort: 8080
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: firefly-uploads
