apps/firefly/firefly/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: firefly
  namespace: firefly
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: firefly
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  type: ClusterIP
